--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,7 +1,6 @@
 #AI
-openai==0.27.8
+openai==1.3.0
 #web framework
-Flask==2.2.3
-Flask-Cors==3.0.10
-
-python-dotenv
+Flask==2.3.3
+Flask-Cors==4.0.0
+python-dotenv==1.0.0
